fix scrollbar

--- a/src/app/privacy-policy/privacy-policy.component.sass
+++ b/src/app/privacy-policy/privacy-policy.component.sass
@@ -1,9 +1,11 @@
 main
     background: black
     min-height: 100svh
+    max-height: 100svh
     width: 100%
     padding: 0px 16px
     color: white
+    overflow-y: scroll
     
 header
     justify-content: space-between
@@ -29,6 +31,7 @@ section
     flex-direction: column
     gap: 16px
     padding: 0px 96px
+
     @media screen and ( max-width: 768px )
         padding: 0px 16px
 
